improve swagger infos
