# internal/interfaceAdapters/controllers/accountController.go
@@ -35,11 +35,13 @@ func (a *accountsController) SetupEndpoints() {
 // createAccount 	 godoc
 // @Summary      This endpoint creates a new account
 // @Description  This endpoint creates a new account and returns the "document_number" (string) representing the accountID
-// @Tags         Account
 // @Accept       json
 // @Produce      json
-// @Success      200
-// @Router       /accounts [post]
+// @Param request_body body string true "Document number to be inserted into account to be created" SchemaExample({\r\n  "document_number": "12345678900"\r\n})
+// @Success      200 {object} dto.AccountPresenterResponse
+// @Failure      400 {object} dto.ErrorOutputDto
+// @Failure      500 {object} dto.ErrorOutputDto
+// @Router       /api/v1/accounts [post]
 func (a *accountsController) createAccount(ctx *gin.Context) {
 	var accountContent dto.CreateAccountInput
 
@@ -56,19 +58,18 @@ func (a *accountsController) createAccount(ctx *gin.Context) {
 	}
 }
 
-// createAccount 	 godoc
+// getAccount 	 godoc
 // @Summary      This endpoint retrieves a specific account
 // @Description  This endpoint receives an accountID and returns the respective account details
 // @Tags         Account
 // @Accept       json
 // @Produce      json
-// @Success      200
-// @Router       /accounts/:accountID [get]
+// @Param 		 accountID path int true "Account ID"
+// @Success      200 {object} dto.AccountPresenterResponse
+// @Failure      400 {object} dto.ErrorOutputDto
+// @Failure      500 {object} dto.ErrorOutputDto
+// @Router       /api/v1/accounts/{accountID} [get]
 func (a *accountsController) getAccount(ctx *gin.Context) {
-	//ctx.JSON(http.StatusOK, gin.H{
-	//	"mock_account_id":      "1",
-	//	"mock_document_number": "12345678900",
-	//})
 	accountID := ctx.Param("accountID")
 	uAccountID, err := validateAccountID(accountID)
 	if err != nil {
